# universe

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml
engine/: Cargo.toml
engine/src/: body.rs  constants.rs  cosmo.rs  lib.rs  metric.rs  observer.rs  timescale.rs  transform.rs  wasm.rs
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/src/: App.tsx  main.tsx  mobile.css
web/src/components/: ClockDashboard.tsx  CosmologyPanel.tsx  DilationTable.tsx
web/src/engine/: wasm-bridge.ts
web/src/scenes/: BlackHoleView.tsx  CosmicTimelineView.tsx  SolarSystemView.tsx  TwinParadoxView.tsx
web/tests/: math-rigor.spec.ts  universe-clock.spec.ts
