[package]
name = "universe-clock"
version = "0.1.0"
edition = "2021"
description = "Relativistic, multi-frame temporal system spanning planetary to cosmological scales"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hifitime = "4.0"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
approx = "0.5"
